[gd_scene load_steps=23 format=3 uid="uid://b3nlt4ukxr2aq"]

[ext_resource type="Script" path="res://User Interface/Shop/Shop_Ui.gd" id="1_r2r25"]
[ext_resource type="PackedScene" uid="uid://c8hlfhlcflaao" path="res://Objects/Field Placer/field_placer_small.tscn" id="2_jfn8x"]
[ext_resource type="PackedScene" uid="uid://56yqyfpprrfd" path="res://Objects/Field Placer/field_placer_medium.tscn" id="3_2s2f0"]
[ext_resource type="PackedScene" uid="uid://cppiokpqqwp5h" path="res://Objects/Field Placer/field_placer_large.tscn" id="4_nwqan"]
[ext_resource type="Theme" uid="uid://1ih2p82wt28l" path="res://User Interface/Shop/ShopTheme.tres" id="5_v16ev"]
[ext_resource type="Texture2D" uid="uid://bclwgx3o5ead5" path="res://User Interface/Imported Asstes Ui/casualui_gamedevmarket/Buttons/PNG/BtnGray.png" id="6_dac6y"]
[ext_resource type="Texture2D" uid="uid://dlgeuh1om1x7x" path="res://User Interface/Imported Asstes Ui/casualui_gamedevmarket/Buttons/PNG/BtnDarkGray.png" id="7_32clf"]
[ext_resource type="Texture2D" uid="uid://bs658gfylwvi6" path="res://User Interface/Imported Asstes Ui/casualui_gamedevmarket/PNG/06.png" id="7_mxl52"]
[ext_resource type="Texture2D" uid="uid://4cd4vt50nu4e" path="res://Blender Objects/ui/plant_images/seed_bag_carrots.png" id="9_lfjgn"]
[ext_resource type="Texture2D" uid="uid://07pt6yo5rfs3" path="res://Blender Objects/ui/plant_images/seed_bag_strawberry.png" id="10_rfrii"]
[ext_resource type="Texture2D" uid="uid://4gx26cyf7k5b" path="res://Blender Objects/ui/plant_images/seed_bag_zucchini.png" id="11_xdo4e"]
[ext_resource type="Texture2D" uid="uid://cvn6031bgx45c" path="res://Blender Objects/ui/plant_images/seed_bag_cauliflower.png" id="12_etnld"]
[ext_resource type="Texture2D" uid="uid://dl2bjkkd8s5nj" path="res://MeshLibrary/svg/left_mouse_button_light.svg" id="13_jngup"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iyqw1"]
content_margin_bottom = 13.0
texture = ExtResource("6_dac6y")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uui01"]
texture = ExtResource("7_32clf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uf3tk"]
texture = ExtResource("7_32clf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_np3x2"]
content_margin_bottom = 13.0
texture = ExtResource("6_dac6y")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5nsms"]
content_margin_bottom = 13.0
texture = ExtResource("7_32clf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oynvi"]
content_margin_bottom = 13.0
texture = ExtResource("7_32clf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5r8nb"]
texture = ExtResource("6_dac6y")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ew6x1"]
texture = ExtResource("7_32clf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_74f1s"]
texture = ExtResource("7_32clf")

[node name="Shop_Ui" type="CanvasLayer"]
script = ExtResource("1_r2r25")
field_placer_small = ExtResource("2_jfn8x")
field_placer_medium = ExtResource("3_2s2f0")
field_placer_large = ExtResource("4_nwqan")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 92.0
offset_top = 40.0
offset_right = -86.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_v16ev")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.458
anchor_top = 0.765
anchor_right = 0.458
anchor_bottom = 0.765
offset_left = -315.616
offset_top = -39.72
offset_right = 316.384
offset_bottom = 39.28
theme_override_constants/separation = 100

[node name="Buy_small_field" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_hover_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_focus_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_iyqw1")
theme_override_styles/hover = SubResource("StyleBoxTexture_uui01")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uf3tk")
text = "Buy Field
 (Small)"

[node name="Label" type="Label" parent="Panel/HBoxContainer/Buy_small_field"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.545
anchor_top = -0.272
anchor_right = 0.545
anchor_bottom = -0.272
offset_left = -19.956
offset_top = -21.017
offset_right = 20.044
offset_bottom = 20.983
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "1"

[node name="Buy_med_field" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_hover_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_focus_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_np3x2")
theme_override_styles/hover = SubResource("StyleBoxTexture_5nsms")
theme_override_styles/pressed = SubResource("StyleBoxTexture_oynvi")
text = "Buy medium field"

[node name="Label2" type="Label" parent="Panel/HBoxContainer/Buy_med_field"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.247
anchor_right = 0.5
anchor_bottom = -0.247
offset_left = -6.47601
offset_top = -20.992
offset_right = 33.524
offset_bottom = 21.008
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "3"

[node name="Buy_large_field" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_hover_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_focus_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.113725, 0.0509804, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_5r8nb")
theme_override_styles/hover = SubResource("StyleBoxTexture_ew6x1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_74f1s")
text = "Buy large field"

[node name="Label3" type="Label" parent="Panel/HBoxContainer/Buy_large_field"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.247
anchor_right = 0.5
anchor_bottom = -0.247
offset_left = -10.476
offset_top = -20.992
offset_right = 29.524
offset_bottom = 21.008
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "5"

[node name="ButtonScaleFarm" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 370.0
offset_top = 266.0
offset_right = 536.0
offset_bottom = 346.0
theme_override_font_sizes/font_size = 30
text = "Scale Farm"

[node name="Top Shop Ribbon" type="Control" parent="Panel"]
anchors_preset = 0
offset_left = 63.0
offset_top = 18.0
offset_right = 103.0
offset_bottom = 58.0

[node name="TextureRect" type="TextureRect" parent="Panel/Top Shop Ribbon"]
layout_mode = 2
offset_left = -21.0
offset_top = -4.0
offset_right = 78.0
offset_bottom = 81.0
texture = ExtResource("7_mxl52")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Panel/Top Shop Ribbon"]
layout_mode = 2
offset_left = 78.0
offset_top = -4.0
offset_right = 177.0
offset_bottom = 81.0
texture = ExtResource("7_mxl52")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Panel/Top Shop Ribbon"]
layout_mode = 2
offset_left = 177.0
offset_top = -4.0
offset_right = 276.0
offset_bottom = 81.0
texture = ExtResource("7_mxl52")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="Panel/Top Shop Ribbon"]
layout_mode = 2
offset_left = 276.0
offset_top = -4.0
offset_right = 375.0
offset_bottom = 81.0
texture = ExtResource("7_mxl52")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="Panel/Top Shop Ribbon"]
layout_mode = 2
offset_left = 375.0
offset_top = -4.0
offset_right = 474.0
offset_bottom = 81.0
texture = ExtResource("7_mxl52")
expand_mode = 1

[node name="TextureRect6" type="TextureRect" parent="Panel/Top Shop Ribbon"]
layout_mode = 2
offset_left = 474.0
offset_top = -4.0
offset_right = 573.0
offset_bottom = 81.0
texture = ExtResource("7_mxl52")
expand_mode = 1

[node name="TextureRect7" type="TextureRect" parent="Panel/Top Shop Ribbon"]
layout_mode = 2
offset_left = 573.0
offset_top = -4.0
offset_right = 672.0
offset_bottom = 81.0
texture = ExtResource("7_mxl52")
expand_mode = 1

[node name="TextureRect8" type="TextureRect" parent="Panel/Top Shop Ribbon"]
layout_mode = 2
offset_left = 672.0
offset_top = -4.0
offset_right = 771.0
offset_bottom = 81.0
texture = ExtResource("7_mxl52")
expand_mode = 1

[node name="TextureRect9" type="TextureRect" parent="Panel/Top Shop Ribbon"]
layout_mode = 2
offset_left = 770.0
offset_top = -4.0
offset_right = 869.0
offset_bottom = 81.0
texture = ExtResource("7_mxl52")
expand_mode = 1

[node name="Button2" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.743
anchor_top = 0.113
anchor_right = 0.743
anchor_bottom = 0.113
offset_left = 46.064
offset_top = 7.77599
offset_right = 139.064
offset_bottom = 68.776
grow_horizontal = 0
text = "Close Shop"

[node name="CarrotSeeds" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.253
anchor_top = 0.454
anchor_right = 0.253
anchor_bottom = 0.454
offset_left = -68.456
offset_top = -68.192
offset_right = 68.544
offset_bottom = 68.808
texture_normal = ExtResource("9_lfjgn")
ignore_texture_size = true
stretch_mode = 0

[node name="Label5" type="Label" parent="CarrotSeeds"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.754
anchor_top = -0.124
anchor_right = -0.754
anchor_bottom = -0.124
offset_left = 158.298
offset_top = -22.012
offset_right = 198.298
offset_bottom = 19.988
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "1"

[node name="StrawberrySeeds" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.461
anchor_right = 0.7
anchor_bottom = 0.461
offset_left = -68.4
offset_top = -68.728
offset_right = 68.6
offset_bottom = 68.272
texture_normal = ExtResource("10_rfrii")
ignore_texture_size = true
stretch_mode = 0

[node name="Label5" type="Label" parent="StrawberrySeeds"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.672
anchor_top = -0.088
anchor_right = 1.672
anchor_bottom = -0.088
offset_left = -163.064
offset_top = -26.944
offset_right = -123.064
offset_bottom = 17.028
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "3"

[node name="ZucchiniSeeds" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.559
anchor_top = 0.458
anchor_right = 0.559
anchor_bottom = 0.458
offset_left = -68.968
offset_top = -68.784
offset_right = 68.032
offset_bottom = 68.216
texture_normal = ExtResource("11_xdo4e")
ignore_texture_size = true
stretch_mode = 0

[node name="Label6" type="Label" parent="ZucchiniSeeds"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.088
anchor_right = 0.5
anchor_bottom = -0.088
offset_left = -12.5
offset_top = -27.944
offset_right = 27.5
offset_bottom = 16.028
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "2"

[node name="CauliflowerSeeds" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.404
anchor_top = 0.461
anchor_right = 0.404
anchor_bottom = 0.461
offset_left = -68.408
offset_top = -68.728
offset_right = 68.592
offset_bottom = 68.272
texture_normal = ExtResource("12_etnld")
ignore_texture_size = true
stretch_mode = 0

[node name="Label4" type="Label" parent="CauliflowerSeeds"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.124
anchor_right = 0.5
anchor_bottom = -0.124
offset_left = -12.5
offset_top = -21.012
offset_right = 27.5
offset_bottom = 20.988
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "2"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="mouseclick" type="TextureRect" parent="."]
visible = false
offset_left = 1071.0
offset_top = 556.0
offset_right = 1111.0
offset_bottom = 604.0
texture = ExtResource("13_jngup")

[connection signal="pressed" from="Panel/HBoxContainer/Buy_small_field" to="." method="_on_buy_small_field_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Buy_med_field" to="." method="_on_buy_med_field_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Buy_large_field" to="." method="_on_buy_large_field_pressed"]
[connection signal="pressed" from="Button2" to="." method="close_shop"]
[connection signal="pressed" from="CarrotSeeds" to="." method="_on_buy_carrot_pressed"]
[connection signal="pressed" from="StrawberrySeeds" to="." method="_on_buy_strawberry_pressed"]
[connection signal="pressed" from="ZucchiniSeeds" to="." method="_on_buy_zucchini_pressed"]
[connection signal="pressed" from="CauliflowerSeeds" to="." method="_on_buy_cauliflower_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
